# GateToSovngarde

./: .gitignore  AGENTS.md  CHANGELOG.md  COMMAND_GROUPS.md  CONSTITUTION_GATES.md  DEVELOPMENT.md  MANIFEST.in  PROJECT_STATUS.md  README.md  RELEASE_NOTES.md  RELEASE_SUMMARY.md  UPDATE_SUMMARY.md  error.txt  main.py  pyproject.toml
.github/workflows/: publish.yml  release.yml  test.yml
.specify/memory/: constitution.md
database/: GTSv101.txt
databases/gtsv101-test/: mods.json
shell/: copy_mods.sh
specs/001-python-mod-importer/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-python-mod-importer/checklists/: requirements.md
specs/002-cli-app-typer/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-cli-app-typer/checklists/: requirements.md
specs/002-cli-app-typer/contracts/: commands.md
specs/003-merge-duplicate-folders/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-merge-duplicate-folders/checklists/: requirements.md
specs/003-merge-duplicate-folders/contracts/: cli-merge-folders.md
src/: mod_importer.py
src/cli/: __init__.py  exceptions.py  main.py
src/cli/commands/: README.md  __init__.py  command_template.py  import_cmd.py  versions_cmd.py
src/cli/db/: __init__.py  loader.py
src/cli/models/: import_result.py
tests/: conftest.py
tests/contract/: test_cli_contracts.py  test_import_contract.py  test_merge_contract.py
tests/integration/: test_command_extensibility.py  test_command_groups.py  test_full_workflow.py  test_import_workflow.py  test_merge_workflows.py  test_user_stories.py
tests/performance/: test_merge_perf.py
tests/unit/: test_db_loader.py  test_import_cmd.py  test_import_service.py  test_merge_service.py
(+13 files in other folders)
